tests/NormalTests/paczka1/small_fuzzy/57983203.err
Error in line 1: J7Y S692 28,7
Error in line 2: J7Y A976 31,9
Error in line 10: kTTwz5e9 S52 0,36
Error in line 11: kTTwz5e9 S52 1,50
Error in line 7: J7Y S52 3,8
